--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             <div class="form-group">
              <input type="text" name="roomId" id="roomId" placeholder="Room" class="form-control">
             </div>
-           <input tupe="button" id="startButton" class="btn btn-success" value="Join"/>
+           <input type="button" id="startButton" class="btn btn-success" value="Join"/>
           </form>
         </div>
       </div>
